# weatherduck

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yml  tests.yml
notebooks/: fiddle.ipynb
src/weatherduck/: __init__.py  ar_forecaster.py  configs.py  lightning.py  main.py  step_predictor.py  weatherduck.py
src/weatherduck/data/: __init__.py  dummy.py
tests/: test_autoregressive.py  test_weatherduck.py
