[project]
name = "weatherduck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leif Denby", email = "leif@denby.eu" }
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.9.1",
    "fiddle>=0.3.0",
    "pytorch-lightning>=2.6.0",
    "torch-geometric>=2.7.0",
    "loguru>=0.7.3",
]

[project.scripts]
weatherduck = "weatherduck:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
