[project]
name = "weatherduck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leif Denby", email = "leif@denby.eu" }
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.9.1",
    "fiddle>=0.3.0",
    "pytorch-lightning>=2.6.0",
    "torch-geometric>=2.7.0",
    "loguru>=0.7.3",
]

[project.scripts]
weatherduck = "weatherduck:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.0",
]

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
known_first_party = ["weatherduck"]
